# service_logger

./: README.md  logger_factory_service.py  poetry.toml  pyproject.toml
logger/: __init__.py  formatter.py  logger_factory.py
tests/: test_formatter.py  test_logger_factory.py
